certifications/jakarta-mvc/2.1/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta MVC.

# Jakarta MVC 2.1 Certification Summary

- Organization Name ("Organization") and, if applicable, URL:
  - [Eclipse Foundation](https://eclipse.org)
- Product Name, Version and download URL (if applicable):
  - [Eclipse Krazo 3.0.0](https://eclipse-ee4j.github.io/krazo/downloads/3.0.0.html)
- Specification Name, Version and download URL:
  - [Jakarta MVC 2.1](https://jakarta.ee/specifications/mvc/2.1)
- TCK Version, digital SHA-256 fingerprint and download URL:
  - [Jakarta MVC TCK 2.1.0](https://download.eclipse.org/jakartaee/mvc/2.1/jakarta-mvc-tck-2.1.0.zip)
  - SHA-256: `14e2b27ee76cd8d0e2c8b506dd83deffff365187d76b909795cf530842853a67`
- Public URL of TCK Results Summary:
  - [https://eclipse-ee4j.github.io/krazo/certifications/jakarta-mvc/2.1.0/TCK-Results.html](https://eclipse-ee4j.github.io/krazo/certifications/jakarta-mvc/2.1.0/TCK-Results.html)
- Any Additional Specification Certification Requirements:
  - None
- Java runtime used to run the implementation:
  - OpenJDK Runtime Environment AdoptOpenJDK-11.0.11+9 (build 11.0.11+9)
- Summary of the information for the certification environment, operating system, cloud, ...:
  - Linux 5.14.14-200.fc34.x86_64 GNU/Linux
  - OpenJDK Runtime Environment AdoptOpenJDK-11.0.11+9 (build 11.0.11+9)
  - Eclipse GlassFish 7.0.0-M8

## Test results

<div class="section">
<h2>Summary<a name="Summary"></a></h2><a name="Summary"></a>
<p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p><br />
<table border="1" class="bodyTable">
<tr class="a">
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td>138</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>75.109</td></tr></table><br />
<p>Note: failures are anticipated and checked for with assertions while errors are unanticipated.</p><br /></div>
<div class="section">
<h2>Package List<a name="Package_List"></a></h2><a name="Package_List"></a>
<p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p><br />
<table border="1" class="bodyTable">
<tr class="a">
<th>Package</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.standard">ee.jakarta.tck.mvc.tests.i18n.standard</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.357</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.application.inheritance">ee.jakarta.tck.mvc.tests.application.inheritance</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.931</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.proxy">ee.jakarta.tck.mvc.tests.mvc.instances.proxy</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.819</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.base">ee.jakarta.tck.mvc.tests.binding.base</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.195</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verify">ee.jakarta.tck.mvc.tests.security.csrf.verify</a></td>
<td>16</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>6.186</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.models">ee.jakarta.tck.mvc.tests.mvc.models</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.997</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.inject">ee.jakarta.tck.mvc.tests.mvc.controller.inject</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.164</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.application.app">ee.jakarta.tck.mvc.tests.application.app</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.811</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.bool">ee.jakarta.tck.mvc.tests.binding.bool</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.786</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.base">ee.jakarta.tck.mvc.tests.viewengine.base</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.389</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.scope">ee.jakarta.tck.mvc.tests.mvc.redirect.scope</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.026</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.algorithm">ee.jakarta.tck.mvc.tests.i18n.algorithm</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.485</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.exception">ee.jakarta.tck.mvc.tests.security.csrf.exception</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.052</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.returntype">ee.jakarta.tck.mvc.tests.mvc.controller.returntype</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.09</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.events">ee.jakarta.tck.mvc.tests.events</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.36</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.access">ee.jakarta.tck.mvc.tests.i18n.access</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.304</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.types">ee.jakarta.tck.mvc.tests.binding.types</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.722</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.header">ee.jakarta.tck.mvc.tests.security.csrf.header</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.358</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numeric">ee.jakarta.tck.mvc.tests.binding.numeric</a></td>
<td>12</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>25.591</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle">ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.039</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.application.context">ee.jakarta.tck.mvc.tests.application.context</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.32</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.base">ee.jakarta.tck.mvc.tests.security.csrf.base</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.121</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.xss">ee.jakarta.tck.mvc.tests.security.xss</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.577</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.uri">ee.jakarta.tck.mvc.tests.mvc.uri</a></td>
<td>8</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.017</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.mediatype">ee.jakarta.tck.mvc.tests.mvc.controller.mediatype</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.024</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.form">ee.jakarta.tck.mvc.tests.form</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>4.58</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.algorithm">ee.jakarta.tck.mvc.tests.viewengine.algorithm</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.601</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.cdi">ee.jakarta.tck.mvc.tests.mvc.instances.cdi</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.043</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.annotation">ee.jakarta.tck.mvc.tests.mvc.controller.annotation</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.157</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.response">ee.jakarta.tck.mvc.tests.mvc.response</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.031</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.send">ee.jakarta.tck.mvc.tests.mvc.redirect.send</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.976</td></tr></table><br />
<p>Note: package statistics are not computed recursively, they only sum up all of its testsuites numbers.</p>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.i18n.standard<a name="ee.jakarta.tck.mvc.tests.i18n.standard"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.standard"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.standardI18nStandardTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.standardI18nStandardTest">I18nStandardTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.357</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.application.inheritance<a name="ee.jakarta.tck.mvc.tests.application.inheritance"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.inheritance"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.application.inheritanceInheritanceTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.application.inheritanceInheritanceTest">InheritanceTest</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.931</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.instances.proxy<a name="ee.jakarta.tck.mvc.tests.mvc.instances.proxy"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.proxy"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.proxyInjectProxyTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.proxyInjectProxyTest">InjectProxyTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.819</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.binding.base<a name="ee.jakarta.tck.mvc.tests.binding.base"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.base"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.baseBindingBaseTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.baseBindingBaseTest">BindingBaseTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.195</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.csrf.verify<a name="ee.jakarta.tck.mvc.tests.security.csrf.verify"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verify"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyDefaultConfigTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyDefaultConfigTest">CsrfVerifyDefaultConfigTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.699</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyImplicitConfigTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyImplicitConfigTest">CsrfVerifyImplicitConfigTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.425</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyOffConfigTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyOffConfigTest">CsrfVerifyOffConfigTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.57</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyExplicitConfigTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyExplicitConfigTest">CsrfVerifyExplicitConfigTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.492</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.models<a name="ee.jakarta.tck.mvc.tests.mvc.models"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.models"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.modelsBuiltinEngineModelTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.modelsBuiltinEngineModelTest">BuiltinEngineModelTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.997</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.controller.inject<a name="ee.jakarta.tck.mvc.tests.mvc.controller.inject"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.inject"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.injectInjectParamsTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.injectInjectParamsTest">InjectParamsTest</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.164</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.application.app<a name="ee.jakarta.tck.mvc.tests.application.app"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.app"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.application.appMvcAppWebXmlTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.application.appMvcAppWebXmlTest">MvcAppWebXmlTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.675</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.application.appMvcAppAnnotationTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.application.appMvcAppAnnotationTest">MvcAppAnnotationTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.136</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.binding.bool<a name="ee.jakarta.tck.mvc.tests.binding.bool"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.bool"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.boolBindingBooleanTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.boolBindingBooleanTest">BindingBooleanTest</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.786</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.viewengine.base<a name="ee.jakarta.tck.mvc.tests.viewengine.base"></a></h3><a name="ee.jakarta.tck.mvc.tests.viewengine.base"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.baseViewEngineBaseTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.baseViewEngineBaseTest">ViewEngineBaseTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.389</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.redirect.scope<a name="ee.jakarta.tck.mvc.tests.mvc.redirect.scope"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.redirect.scope"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.scopeRedirectScopeTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.scopeRedirectScopeTest">RedirectScopeTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.026</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.i18n.algorithm<a name="ee.jakarta.tck.mvc.tests.i18n.algorithm"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.algorithm"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.algorithmI18nAlgorithmTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.algorithmI18nAlgorithmTest">I18nAlgorithmTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.485</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.csrf.exception<a name="ee.jakarta.tck.mvc.tests.security.csrf.exception"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.exception"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.exceptionCsrfCustomMapperTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.exceptionCsrfCustomMapperTest">CsrfCustomMapperTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.052</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.controller.returntype<a name="ee.jakarta.tck.mvc.tests.mvc.controller.returntype"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.returntype"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.returntypeReturnTypeTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.returntypeReturnTypeTest">ReturnTypeTest</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.09</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.events<a name="ee.jakarta.tck.mvc.tests.events"></a></h3><a name="ee.jakarta.tck.mvc.tests.events"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.eventsMvcEventsTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.eventsMvcEventsTest">MvcEventsTest</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.36</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.i18n.access<a name="ee.jakarta.tck.mvc.tests.i18n.access"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.access"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.accessI18nAccessTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.accessI18nAccessTest">I18nAccessTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.304</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.binding.types<a name="ee.jakarta.tck.mvc.tests.binding.types"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.types"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.typesBindingTypesTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.typesBindingTypesTest">BindingTypesTest</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.722</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.csrf.header<a name="ee.jakarta.tck.mvc.tests.security.csrf.header"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.header"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfDefaultHeaderTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfDefaultHeaderTest">CsrfDefaultHeaderTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.292</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfCustomHeaderTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfCustomHeaderTest">CsrfCustomHeaderTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.066</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.binding.numeric<a name="ee.jakarta.tck.mvc.tests.binding.numeric"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numeric"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingIntegerTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingIntegerTest">BindingIntegerTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>13.672</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingBigIntegerTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingBigIntegerTest">BindingBigIntegerTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.817</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingLongTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingLongTest">BindingLongTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.816</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingDoubleTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingDoubleTest">BindingDoubleTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.459</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingFloatTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingFloatTest">BindingFloatTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.931</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingBigDecimalTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingBigDecimalTest">BindingBigDecimalTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.896</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle<a name="ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.lifecycleControllerLifecycleTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.lifecycleControllerLifecycleTest">ControllerLifecycleTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.039</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.application.context<a name="ee.jakarta.tck.mvc.tests.application.context"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.context"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.application.contextMvcContextTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.application.contextMvcContextTest">MvcContextTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.32</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.csrf.base<a name="ee.jakarta.tck.mvc.tests.security.csrf.base"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.base"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.baseCsrfBaseTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.baseCsrfBaseTest">CsrfBaseTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.121</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.xss<a name="ee.jakarta.tck.mvc.tests.security.xss"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.xss"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.xssEncodersTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.xssEncodersTest">EncodersTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.577</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.uri<a name="ee.jakarta.tck.mvc.tests.mvc.uri"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.uri"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.uriUriBuildingTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.uriUriBuildingTest">UriBuildingTest</a></td>
<td>8</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.017</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.controller.mediatype<a name="ee.jakarta.tck.mvc.tests.mvc.controller.mediatype"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.mediatype"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.mediatypeMediaTypeTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.mediatypeMediaTypeTest">MediaTypeTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.024</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.form<a name="ee.jakarta.tck.mvc.tests.form"></a></h3><a name="ee.jakarta.tck.mvc.tests.form"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.formDisabledFormMethodOverwriteTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.formDisabledFormMethodOverwriteTest">DisabledFormMethodOverwriteTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.406</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.formCustomFormMethodFieldTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.formCustomFormMethodFieldTest">CustomFormMethodFieldTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.506</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.formDefaultFormMethodOverwriteTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.formDefaultFormMethodOverwriteTest">DefaultFormMethodOverwriteTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.668</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.viewengine.algorithm<a name="ee.jakarta.tck.mvc.tests.viewengine.algorithm"></a></h3><a name="ee.jakarta.tck.mvc.tests.viewengine.algorithm"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.algorithmViewEngineAlgorithmTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.algorithmViewEngineAlgorithmTest">ViewEngineAlgorithmTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.601</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.instances.cdi<a name="ee.jakarta.tck.mvc.tests.mvc.instances.cdi"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.cdi"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.cdiCdiControllerTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.cdiCdiControllerTest">CdiControllerTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.043</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.controller.annotation<a name="ee.jakarta.tck.mvc.tests.mvc.controller.annotation"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.annotation"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.annotationControllerAnnotationTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.annotationControllerAnnotationTest">ControllerAnnotationTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.157</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.response<a name="ee.jakarta.tck.mvc.tests.mvc.response"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.response"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.responseResponseFeaturesTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.responseResponseFeaturesTest">ResponseFeaturesTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.031</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.redirect.send<a name="ee.jakarta.tck.mvc.tests.mvc.redirect.send"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.redirect.send"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.sendSendRedirectTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.sendSendRedirectTest">SendRedirectTest</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.976</td></tr></table></div><br /></div>
<div class="section">
<h2>Test Cases<a name="Test_Cases"></a></h2><a name="Test_Cases"></a>
<p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p>
<div class="section">
<h3>BindingIntegerTest<a name="BindingIntegerTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingIntegerTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidInteger</td>
<td>2.744</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyInteger</td>
<td>0.12</td></tr></table></div>
<div class="section">
<h3>BindingBigIntegerTest<a name="BindingBigIntegerTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingBigIntegerTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyBigInteger</td>
<td>0.979</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidBigInteger</td>
<td>0.306</td></tr></table></div>
<div class="section">
<h3>BindingLongTest<a name="BindingLongTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingLongTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyLong</td>
<td>1.005</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidLong</td>
<td>0.097</td></tr></table></div>
<div class="section">
<h3>BindingDoubleTest<a name="BindingDoubleTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingDoubleTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyDouble</td>
<td>0.749</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidDouble</td>
<td>0.109</td></tr></table></div>
<div class="section">
<h3>BindingFloatTest<a name="BindingFloatTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingFloatTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyFloat</td>
<td>0.521</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidFloat</td>
<td>0.122</td></tr></table></div>
<div class="section">
<h3>BindingBigDecimalTest<a name="BindingBigDecimalTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingBigDecimalTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyBigDecimal</td>
<td>0.599</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidBigDecimal</td>
<td>0.081</td></tr></table></div>
<div class="section">
<h3>BindingBaseTest<a name="BindingBaseTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.baseBindingBaseTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidationError</td>
<td>0.734</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBindingError</td>
<td>0.034</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidValue</td>
<td>0.073</td></tr></table></div>
<div class="section">
<h3>BindingBooleanTest<a name="BindingBooleanTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.boolBindingBooleanTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsFoobar</td>
<td>0.599</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsTrue</td>
<td>0.033</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsEmpty</td>
<td>0.07</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsFalse</td>
<td>0.036</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsOn</td>
<td>0.068</td></tr></table></div>
<div class="section">
<h3>BindingTypesTest<a name="BindingTypesTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.typesBindingTypesTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithHeaderParam</td>
<td>0.32</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithFormParam</td>
<td>0.084</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithCookieParam</td>
<td>0.023</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithQueryParam</td>
<td>0.075</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithMatrixParam</td>
<td>0.018</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithPathParam</td>
<td>0.098</td></tr></table></div>
<div class="section">
<h3>ViewEngineAlgorithmTest<a name="ViewEngineAlgorithmTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.viewengine.algorithmViewEngineAlgorithmTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>relativeViewPath</td>
<td>0.288</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>absoluteViewPath</td>
<td>0.018</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>overwriteBuiltinEngine</td>
<td>0.096</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>priorityOrderingCustomEngines</td>
<td>0.016</td></tr></table></div>
<div class="section">
<h3>ViewEngineBaseTest<a name="ViewEngineBaseTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.viewengine.baseViewEngineBaseTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>viewEngineFacelets</td>
<td>0.285</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>viewEngineCustom</td>
<td>0.017</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>viewEngineJsp</td>
<td>0.201</td></tr></table></div>
<div class="section">
<h3>I18nAlgorithmTest<a name="I18nAlgorithmTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.algorithmI18nAlgorithmTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>chainStopsForNonNullResult</td>
<td>0.291</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>highestPrioExecutedFirst</td>
<td>0.018</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>continueChainForNullResult</td>
<td>0.065</td></tr></table></div>
<div class="section">
<h3>I18nAccessTest<a name="I18nAccessTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.accessI18nAccessTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>accessLocaleFromView</td>
<td>0.261</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>accessLocaleFromController</td>
<td>0.019</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>accessLocaleFromViewEngine</td>
<td>0.06</td></tr></table></div>
<div class="section">
<h3>I18nStandardTest<a name="I18nStandardTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.standardI18nStandardTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>multipleLocalesInAcceptLanguageHeader</td>
<td>0.309</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>missingAcceptLanguageHeader</td>
<td>0.058</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>singleLocaleInAcceptLanguageHeader</td>
<td>0.015</td></tr></table></div>
<div class="section">
<h3>InheritanceTest<a name="InheritanceTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.inheritanceInheritanceTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnControllerAndSuperMethod</td>
<td>0.271</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnlyOnSuperMethod</td>
<td>0.298</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnSuperClassAndInterfaceMethod</td>
<td>0.02</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnlyOnControllerMethod</td>
<td>0.015</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnControllerAndInterfaceMethod</td>
<td>0.067</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnlyOnInterfaceMethod</td>
<td>0.205</td></tr></table></div>
<div class="section">
<h3>MvcAppWebXmlTest<a name="MvcAppWebXmlTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.appMvcAppWebXmlTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testUrlSpaceViaAnnotation</td>
<td>0.256</td></tr></table></div>
<div class="section">
<h3>MvcAppAnnotationTest<a name="MvcAppAnnotationTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.appMvcAppAnnotationTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testUrlSpaceViaAnnotation</td>
<td>0.255</td></tr></table></div>
<div class="section">
<h3>MvcContextTest<a name="MvcContextTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.contextMvcContextTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testMvcContextInjected</td>
<td>0.298</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testMvcContextScope</td>
<td>0.015</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testMvcContextAccessInformation</td>
<td>0.014</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testMvcContextAccessViaEl</td>
<td>0.038</td></tr></table></div>
<div class="section">
<h3>DisabledFormMethodOverwriteTest<a name="DisabledFormMethodOverwriteTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.formDisabledFormMethodOverwriteTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPOSTIgnoringHiddenFieldWhenFormMethodOverwriteIsDisabled</td>
<td>0.392</td></tr></table></div>
<div class="section">
<h3>CustomFormMethodFieldTest<a name="CustomFormMethodFieldTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.formCustomFormMethodFieldTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPUTIfFieldMatchesDifferentName</td>
<td>0.411</td></tr></table></div>
<div class="section">
<h3>DefaultFormMethodOverwriteTest<a name="DefaultFormMethodOverwriteTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.formDefaultFormMethodOverwriteTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPOSTWithoutHiddenFormMethod</td>
<td>0.496</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPATCHWhenHiddenFormMethodIsPATCH</td>
<td>0.169</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processDELETEWhenHiddenFormMethodIsDelete</td>
<td>0.046</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPUTWhenHiddenFormMethodIsPUT</td>
<td>0.077</td></tr></table></div>
<div class="section">
<h3>CsrfVerifyDefaultConfigTest<a name="CsrfVerifyDefaultConfigTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyDefaultConfigTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndInvalidToken</td>
<td>0.37</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndValidToken</td>
<td>0.232</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndInvalidToken</td>
<td>0.025</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndValidToken</td>
<td>0.045</td></tr></table></div>
<div class="section">
<h3>CsrfVerifyImplicitConfigTest<a name="CsrfVerifyImplicitConfigTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyImplicitConfigTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndInvalidToken</td>
<td>0.218</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndValidToken</td>
<td>0.329</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndInvalidToken</td>
<td>0.047</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndValidToken</td>
<td>0.026</td></tr></table></div>
<div class="section">
<h3>CsrfVerifyOffConfigTest<a name="CsrfVerifyOffConfigTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyOffConfigTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndInvalidToken</td>
<td>0.463</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndValidToken</td>
<td>0.03</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndInvalidToken</td>
<td>0.075</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndValidToken</td>
<td>0.104</td></tr></table></div>
<div class="section">
<h3>CsrfVerifyExplicitConfigTest<a name="CsrfVerifyExplicitConfigTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyExplicitConfigTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndInvalidToken</td>
<td>0.247</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndValidToken</td>
<td>0.166</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndInvalidToken</td>
<td>0.06</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndValidToken</td>
<td>0.028</td></tr></table></div>
<div class="section">
<h3>CsrfCustomMapperTest<a name="CsrfCustomMapperTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.exceptionCsrfCustomMapperTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>customExceptionMapper</td>
<td>0.201</td></tr></table></div>
<div class="section">
<h3>CsrfDefaultHeaderTest<a name="CsrfDefaultHeaderTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfDefaultHeaderTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitInvalidTokenViaForm</td>
<td>0.276</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidTokenViaForm</td>
<td>0.145</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidTokenViaHeader</td>
<td>0.021</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitInvalidTokenViaHeader</td>
<td>0.031</td></tr></table></div>
<div class="section">
<h3>CsrfCustomHeaderTest<a name="CsrfCustomHeaderTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfCustomHeaderTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidCustomTokenViaHeader</td>
<td>0.343</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitInvalidCustomTokenViaHeader</td>
<td>0.022</td></tr></table></div>
<div class="section">
<h3>CsrfBaseTest<a name="CsrfBaseTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.baseCsrfBaseTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>tokenIsProvidedViaElAndResponseHeader</td>
<td>0.252</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>canInjectTokenIntoHiddenField</td>
<td>0.014</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>csrfInstanceViaContext</td>
<td>0.016</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>csrfInstanceViaEL</td>
<td>0.012</td></tr></table></div>
<div class="section">
<h3>EncodersTest<a name="EncodersTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.xssEncodersTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodesJavaScript</td>
<td>0.205</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodersInjectable</td>
<td>0.149</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodersAvailableFromEl</td>
<td>0.014</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodesHtml</td>
<td>0.507</td></tr></table></div>
<div class="section">
<h3>MvcEventsTest<a name="MvcEventsTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.eventsMvcEventsTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>aroundRenderView</td>
<td>0.224</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>aroundControllerEvents</td>
<td>0.02</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>redirectEvent</td>
<td>0.059</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>afterControllerWithError</td>
<td>0.038</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>afterViewWithError</td>
<td>0.288</td></tr></table></div>
<div class="section">
<h3>InjectParamsTest<a name="InjectParamsTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.injectInjectParamsTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectQueryParam</td>
<td>0.321</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectHeaderParam</td>
<td>0.013</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectFieldParam</td>
<td>0.012</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectPropertyParam</td>
<td>0.012</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectPathParam</td>
<td>0.036</td></tr></table></div>
<div class="section">
<h3>ReturnTypeTest<a name="ReturnTypeTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.returntypeReturnTypeTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>responseWithNullEntity</td>
<td>0.296</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>responseWithStringEntity</td>
<td>0.012</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>voidWithoutViewAnnotation</td>
<td>0.018</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>stringWithNullResult</td>
<td>0.012</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>stringReturnType</td>
<td>0.01</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>voidWithViewAnnotation</td>
<td>0.04</td></tr></table></div>
<div class="section">
<h3>MediaTypeTest<a name="MediaTypeTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.mediatypeMediaTypeTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>defaultMediaType</td>
<td>0.281</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>customMediaType</td>
<td>0.012</td></tr></table></div>
<div class="section">
<h3>ControllerAnnotationTest<a name="ControllerAnnotationTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.annotationControllerAnnotationTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerClass</td>
<td>0.428</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerHybrid</td>
<td>0.026</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerMethod</td>
<td>0.014</td></tr></table></div>
<div class="section">
<h3>ResponseFeaturesTest<a name="ResponseFeaturesTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.responseResponseFeaturesTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>responseAllowsSettingHeaders</td>
<td>0.199</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>responseAllowsSettingCacheControl</td>
<td>0.013</td></tr></table></div>
<div class="section">
<h3>CdiControllerTest<a name="CdiControllerTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.cdiCdiControllerTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerCdiInjection</td>
<td>0.162</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>hybridCdiInjection</td>
<td>0.02</td></tr></table></div>
<div class="section">
<h3>InjectProxyTest<a name="InjectProxyTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.proxyInjectProxyTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectProxyIfRequired</td>
<td>0.175</td></tr></table></div>
<div class="section">
<h3>ControllerLifecycleTest<a name="ControllerLifecycleTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.lifecycleControllerLifecycleTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerRequestScope</td>
<td>0.233</td></tr></table></div>
<div class="section">
<h3>BuiltinEngineModelTest<a name="BuiltinEngineModelTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.modelsBuiltinEngineModelTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>cdiModelJsp</td>
<td>0.167</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>mvcModelsFacelets</td>
<td>0.027</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>cdiModelFacelets</td>
<td>0.013</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>mvcModelsJsp</td>
<td>0.011</td></tr></table></div>
<div class="section">
<h3>UriBuildingTest<a name="UriBuildingTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.uriUriBuildingTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>mapPathParam</td>
<td>0.159</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>simpleUriViaEl</td>
<td>0.014</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>mapQueryParam</td>
<td>0.014</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodingQueryParam</td>
<td>0.013</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>mapMatrixParam</td>
<td>0.013</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodingMatrixParam</td>
<td>0.039</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>supportsUriRef</td>
<td>0.012</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodingPathParam</td>
<td>0.013</td></tr></table></div>
<div class="section">
<h3>RedirectScopeTest<a name="RedirectScopeTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.redirect.scopeRedirectScopeTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>sessionScope</td>
<td>0.202</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>redirectScope</td>
<td>0.027</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>requestScope</td>
<td>0.017</td></tr></table></div>
<div class="section">
<h3>SendRedirectTest<a name="SendRedirectTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.redirect.sendSendRedirectTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>relativePathRedirectPrefix</td>
<td>0.068</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>relativePathResponse</td>
<td>0.012</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>usesCorrectStatusCide</td>
<td>0.012</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>redirectViaRedirectPrefix</td>
<td>0.01</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>redirectViaResponse</td>
<td>0.011</td></tr></table></div><br /></div>
      </div>
    </div>